syntax = "proto3";

package pb;

import "global.proto";

// rules: qevent_rpc
service RPC_Chat {
    //rpc Chat (Param) returns (Response);

    // crud: c: with sending msg, u: none, d: with direct

    // Privacy: none in here, with settings in profile privacy

    // Messages
    rpc ChatSendMessage (ChatSendMessageParam) returns (ChatSendMessageResponse); // qevent_id_10
    rpc ChatEditMessage (ChatEditMessageParam) returns (ChatEditMessageResponse); // qevent
    rpc ChatDeleteMessages (ChatDeleteMessagesParam) returns (ChatDeleteMessagesResponse); // qevent
    rpc ChatDeleteHistory (ChatDeleteHistoryParam) returns (ChatDeleteHistoryResponse); // qevent

    // Others
    rpc ChatSendDoingAction (ChatSendDoingActionParam) returns (ChatSendDoingActionResponse);
    rpc ChatReportChat (ChatReportChatParam) returns (ChatReportChatResponse);

    // Views
    rpc ChatGetFull (ChatGetFullMessageParam) returns (ChatGetFullMessageResponse);
    rpc ChatGetMessagesList (ChatGetMessagesListParam) returns (ChatGetMessagesListResponse);
    rpc ChatGetMediaList (ChatGetMediaListParam) returns (ChatGetMediaListResponse);
}

// crud

// Members


// Privacy

// Messages

message ChatSendMessageParam {
    uint32 group_id = 1;
}

message ChatSendMessageResponse {

}

message ChatEditMessageParam {
    uint32 group_id = 1;
}

message ChatEditMessageResponse {

}

message ChatDeleteMessagesParam {
    uint32 group_id = 1;
}

message ChatDeleteMessagesResponse {

}

message ChatDeleteHistoryParam {
}

message ChatDeleteHistoryResponse {
}

// Others

message ChatAvatarChangeParam {
}

message ChatAvatarChangeResponse {
}

message ChatSendDoingActionParam {
}

message ChatSendDoingActionResponse {
}

message ChatReportChatParam {
}

message ChatReportChatResponse {
}

// Views

message ChatGetFullMessageParam {
    uint32 group_id = 1;
}

message ChatGetFullMessageResponse {

}

message ChatGetMessagesListParam {
}

message ChatGetMessagesListResponse {
}

message ChatGetMediaListParam {
}

message ChatGetMediaListResponse {
}

// Dep

/*

message Param {
}

message Response {
}

*/
